# grobid-llm-benchmark

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: .env.example  Dockerfile.harness  docker-compose.gpu.yml  docker-compose.yml  run_benchmark.sh
deploy/config/: grobid.entrypoint.sh
deploy/patches/: LICENSE.grobid  README.md  llm-eval.patch
src/grobid_llm_benchmark/: __init__.py  cli.py  compare.py  consolidate.py  cost.py  dataset.py  grobid_client.py  json_utils.py  models.py  pdf.py  runner.py  scorer.py  tei_schema.py  tei_writer.py
src/grobid_llm_benchmark/backends/: __init__.py  api_backend.py  base.py  mock_backend.py  ollama_backend.py
tests/: conftest.py  test_api_backend.py  test_compare.py  test_consolidate.py  test_docker_stack.py  test_end_to_end_offline.py  test_json_repair.py  test_models.py  test_scorer_smoke.py  test_tei_writer.py
