[tool.poetry]
name = "grobid-llm-benchmark"
version = "0.1.0"
description = "Benchmark harness comparing multimodal LLMs against GROBID for scholarly PDF extraction (GROBID issue #1146)"
authors = ["Davide Fiocco <davidefiocco@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/davidefiocco/grobid-llm-benchmark"
packages = [{ include = "grobid_llm_benchmark", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pymupdf = "^1.24"
lxml = "^5.2"
pydantic = "^2.8"
ollama = "^0.3"
openai = "^1.54"
typer = "^0.15"
rich = "^13.7"
huggingface-hub = "^0.24"
httpx = "^0.27"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
ruff = "^0.6"

[tool.poetry.scripts]
glb = "grobid_llm_benchmark.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
markers = [
    "offline: runs with no network, GPU, or LLM credentials",
    "docker: requires a local docker daemon",
]
